--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fast-csv": "^2.4.1",
     "json2csv": "^4.2.1",
     "moment": "^2.22.2",
+    "querystring": "^0.2.0",
     "request": "^2.88.0"
   }
 }
